# PascalCompiler

./: CMakeLists.txt  Makefile  Makefile_backup  PasC  README.md  compile  hello.pas~  parse  runtime.c
Lex_Yacc/: pascal.y
doc/: grammer.txt  ir.txt
include/: cgen.h  constTab.h  globals.h  optimize.h  symbol.h  symbol.h~  util.h  x86.h  y.tab.h
src/: cgen.c  constTab.c  lex.yy.c  main.c  main_clion.c  main_x86.c  optimize.c  runtime.c  symbol.c  symbol.c~  util.c  x86.c  x86_new.c  y.tab.c
test/: arith  arith.pas  arith.s  arith.tac  arith_real  arith_real.pas  arith_real.s  arith_real.tac  calcu  calcu.pas  calcu.s  calcu.tac  calcu_real  calcu_real.pas  calcu_real.s  calcu_real.tac  ddd  expression  expression.pas  expression.s  expression.tac  expression_backup.s  forloop  forloop.pas  forloop.s  forloop.tac  forloop_backup.s  function.pas  he.pas  hello  hello.pas  hello.pas~  hello.s  hello.tac  hello_mod.pas  ifelse.pas  recurse  recurse.pas  recurse.s  recurse.tac  (+8 more)
